--- a/04-geometry/package.json
+++ b/04-geometry/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "03-basics",
+  "name": "04-geometry",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,17 +7,17 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.27",
-    "@types/react": "^18.0.6",
-    "@types/react-dom": "^18.0.2",
-    "@types/three": "^0.139.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@types/node": "^16.11.32",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/three": "^0.140.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "three": "^0.139.2",
-    "typescript": "^4.6.3",
+    "three": "^0.140.0",
+    "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
